# badcad-test

./: .gitignore  README.md  Untitled.ipynb  battery-holder.ipynb  flower-support.ipynb  hello.py  magsafe-mount.ipynb  pyproject.toml
