[project]
name = "badcadtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "badcad",
    "jupyter>=1.1.1",
    "manifold3d==3",
    "pycairo>=1.27.0",
    "pythreejs>=2.4.2",
    "svgelements>=1.9.6",
]

[tool.uv.sources]
badcad = { git = "https://github.com/wrongbad/badcad.git" }
